# AvionicsSoftware

./: .clang-format  .cproject  .gitignore  .gitmodules  .mxproject  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .project  .travis.yml  AvionicsSoftware Debug.cfg  AvionicsSoftware.ioc  AvionicsSoftware.xml  CMakeLists.txt  Dockerfile  Makefile  New_configuration.cfg  README.md  SOAR_format_prefs.xml  STM32F405RGTX_FLASH.ld  STM32F405RGTX_RAM.ld  TempFilter.cpp  TempFilterHPP.hpp  VanderAvionics.ioc  astylerc  clang-format-hook.py  format.sh  generate.bat  run_unit_tests.sh  tempFilterGraph.py  tempFilterLinear.cpp  tempFilterLinearGraph.py
.github/workflows/: clang-format.yml  format.yml  main.yaml
Components/: GPIO.hpp  README.md  SystemDefines.hpp  Utils.cpp  Utils.hpp  heap_useNewlib_ST.c  main_avionics.cpp  main_avionics.hpp
Components/Communication/: SPIDriver.cpp  UARTDriver.cpp  UARTTask.cpp
Components/Core/: Command.cpp  DMAController.cpp  Mutex.cpp  Queue.cpp  RunInterface.cpp  Task.cpp  Timer.cpp  w25qxx.cpp
Components/Flash/: FlashLogHandler.cpp  FlashTask.cpp  SystemStorage.cpp  w25qxx.cpp
Components/FlightControl/: FlightTask.cpp  HDITask.cpp  MEVManager.cpp  RocketSM.cpp  RocketSM.cpp.orig  TelemetryTask.cpp  TimerTransitions.cpp  WatchdogTask.cpp
Components/Sensors/: .project  BarometerTask.cpp  BatteryTask.cpp  GPSTask.cpp  IMUTask.cpp  Kalman.cpp  Kalman.h  KalmanFilterTask.cpp  PressureTransducerTask.cpp  Unscented.cpp  Unscented.h
Components/SoarDebug/: Debug.cpp  DebugTask.cpp  Utils.cpp
Components/SoarProtocol/: DMBProtocolTask.cpp  DMBProtocolTask.hpp  ExampleRepeaterTask.hpp  PBBRxProtocolTask.cpp  PBBRxProtocolTask.hpp  ProtocolRepeater.hpp
Components/_Libraries/: README.md
Core/: README.md
Core/FlightState/: EngineControl.c  MonitorForEmergencyShutoff.cpp  ParachutesControl.cpp
Core/Inc/: AbortPhase.h  Data.h  Debug.h  EngineControl.h  FlightPhase.h  FreeRTOSConfig.h  Globals.h  LogData.h  MonitorForEmergencyShutoff.h  ParachutesControl.h  ReadAccelGyroMagnetism.h  ReadBarometer.h  ReadBatteryVoltage.h  ReadCombustionChamberPressure.h  ReadGps.h  ReadOxidizerTankPressure.h  TransmitData.h  Utils.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Main/: main.c  main.cpp
Core/Src/: AbortPhase.c  Debug.c  EngineControl.c  FlightPhase.c  LogData.c  MonitorForEmergencyShutoff.c  ParachutesControl.c  ReadAccelGyroMagnetism.c  ReadBarometer.c  ReadBatteryVoltage.c  ReadCombustionChamberPressure.c  ReadGps.c  TransmitData.c  (+9 more)
Debug/: .gitignore  makefile  objects.list
Inc/: AbortPhase.h  AltitudeKalmanFilter.h  CobsDecode.h  CobsEncode.h  Data.h  Debug.h  EEPROM.h  EngineControl.h  FlightPhase.h  FreeRTOSConfig.h  Globals.h  LogData.h  MonitorForEmergencyShutoff.h  ParachutesControl.h  ReadAccelGyroMagnetism.h  ReadBarometer.h  ReadCombustionChamberPressure.h  ReadGps.h  ReadOxidizerTankPressure.h  SoftwareVersion.h  TransmitData.h  Utils.h  ValveControl.h  Vec3d.h  global.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
STM32F411VET/: .cproject  .project  Makefile  STM32F411VET.ioc  STM32F411VETx_FLASH.ld  format.sh
Src/: AbortPhase.c  AltitudeKalmanFilter.c  CobsDecode.c  CobsEncode.c  Debug.c  EEPROM.c  EngineControl.c  FlightPhase.c  LogData.c  MonitorForEmergencyShutoff.c  ParachutesControl.c  ReadAccelGyroMagnetism.c  ReadBarometer.c  ReadBatteryVoltage.c  ReadCombustionChamberPressure.c  ReadGps.c  ReadOxidizerTankPressure.c  TransmitData.c  Utils.c  ValveControl.c  Vec3d.c  freertos.c  hikingAlgorithm.java  main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  syscalls.c
Tests/: test1.cpp  test2.cpp
_IDE/: README.md
(+454 files in other folders)
