# CMakeList.txt : CMake project for AvionicsSoftware, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("AvionicsSoftware")

# Add source to this project's executable.
add_executable (AvionicsSoftware "AvionicsSoftware.cpp" "AvionicsSoftware.h")

# TODO: Add tests and install targets if needed.
